--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/2,4-D_Absolute ED/MIs_2,4-D Only_GH_All Pops_ DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/2,4-D_Absolute ED/MIs_2,4-D Only_GH_All Pops_ DR Percent Bio.Rmd
@@ -178,7 +178,7 @@ plot(model.W1.2,
      type = "average",
      xlab = expression(paste("2,4-D rate (g ae ha"^-1, ")")),
      ylab = expression(paste("Biomass (%)")),
-     #ylim = c(0, 1),
+     ylim = c(0, 100),
      #broken = T,
      col = c("darkgreen", "red", "navy", "orange"),
      pch = c(19, 17, 15, 18),
