--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/2,4-D_Absolute ED/MIs_2,4-D Only_GH_All Pops_ DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/2,4-D_Absolute ED/MIs_2,4-D Only_GH_All Pops_ DR Percent Bio.Rmd
@@ -177,8 +177,8 @@ par(mar = c(5,5,1,1))
 plot(model.W1.2,
      type = "average",
      xlab = expression(paste("2,4-D rate (g ae ha"^-1, ")")),
-     ylab = expression(paste("Biomass (%)")),
-     ylim = c(0, 100),
+     ylab = expression(paste("Biomass (x 100%)")),
+     ylim = c(0, 1),
      #broken = T,
      col = c("darkgreen", "red", "navy", "orange"),
      pch = c(19, 17, 15, 18),
@@ -186,10 +186,8 @@ plot(model.W1.2,
      cex.axis = 1.5,
      cex.lab = 2.0,
      cex.legend = 1.8,
-     legendPos = c(15000, 100),
-     lwd = 1.5,
-     normal = T, 
-     normRef = 100)
+     legendPos = c(15000, 1),
+     lwd = 1.5)
 
 
 
@@ -197,7 +195,7 @@ points(x = c(ED50.A82[1, 1],
              ED50.A101[1, 1],
              ED50.A103[1, 1],
              ED50.A75[1, 1]),
-       y = c(50, 50, 50, 50),
+       y = c(0.5, 0.5, 0.5, 0.5),
        pch = 8,
        cex = 1.3)
 
