--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/2023/Atrazine_Absolute ED/MIs_Atra Only_GH_All Pops_ DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/2023/Atrazine_Absolute ED/MIs_Atra Only_GH_All Pops_ DR Percent Bio.Rmd
@@ -80,25 +80,25 @@ summary(model.LL4)
 getMeanFunctions() # To get the most used functions when fitting dose-response curves.
 
 
-mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), LL.5(), W1.2(), W1.3(), W1.4(), W2.2(), W2.3(), W2.4(), BC.4(), BC.5(), LL2.2(), LL2.3(), LL2.3u(), LL2.4(), LL2.5(), AR.2(), AR.3(), MM.2(), MM.3(), baro5()), linreg = T)
+mselect(model.LL4,  list(LL.2(), LL2.2(), LL.3(), LL.3u(), LL2.3(), LL2.3u(), LL.4(), LL2.4(), LL.5(), LL2.5(), W1.2(), W2.2(), W1.3(), W1.3u(), W2.3(), W2.3u(), W1.4(), W2.4()))
 
 
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL.2 <- drm(percent_bio ~ rate, pop, fct = LL.2(), data = data_atra, type = "continuous")
+model.W1.2 <- drm(percent_bio ~ rate, pop, fct = W1.2(), data = data_atra, type = "continuous")
 
-plot(fitted(model.LL.2), residuals(model.LL.2))
+plot(fitted(model.W1.2), residuals(model.W1.2))
 
-qqnorm(residuals(model.LL.2))
-
-
-modelFit(model.LL.2)
-
-summary(model.LL.2)
+qqnorm(residuals(model.W1.2))
 
 
-anova(model.LL.2, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+modelFit(model.W1.2)
+
+summary(model.W1.2)
+
+
+anova(model.W1.2, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -111,13 +111,13 @@ anova(model.LL.2, model.LL4) # p-value > 0.05 means that there is no difference 
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.A82 <- ED(model.LL.2, 0.5, clevel = "A82", type = "absolute", interval = "delta")
+ED50.A82 <- ED(model.W1.2, 0.5, clevel = "A82", type = "absolute", interval = "delta")
 
-ED50.A101 <- ED(model.LL.2, 0.5, clevel = "A101", type = "absolute", interval = "delta")
+ED50.A101 <- ED(model.W1.2, 0.5, clevel = "A101", type = "absolute", interval = "delta")
 
-ED50.A103 <- ED(model.LL.2, 0.5, clevel = "A103", type = "absolute", interval = "delta")
+ED50.A103 <- ED(model.W1.2, 0.5, clevel = "A103", type = "absolute", interval = "delta")
 
-ED50.A75 <- ED(model.LL.2, 0.5, clevel = "A75", type = "absolute", interval = "delta")
+ED50.A75 <- ED(model.W1.2, 0.5, clevel = "A75", type = "absolute", interval = "delta")
 
 
 # If the model was a Log-logistic (log(ED50) as parameter) E.g.: LL2.3,  we should use logBase = exp(1). Eg: ED50.A82 <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[5, 1] * 0.5), clevel = "A82", type = "absolute", interval = "delta", logBase = exp(1))
@@ -132,15 +132,15 @@ ED50.A75 <- ED(model.LL.2, 0.5, clevel = "A75", type = "absolute", interval = "d
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
 
-EDcomp(model.LL.2, c(0.5, 0.5), 
+EDcomp(model.W1.2, c(0.5, 0.5), 
        compMatch = c("A101", "A82"), type = "absolute", interval = "none", reverse = F)
 
 
-EDcomp(model.LL.2, c(0.5, 0.5), 
+EDcomp(model.W1.2, c(0.5, 0.5), 
        compMatch = c("A103", "A82"), type = "absolute", interval = "none", reverse = F)
 
 
-EDcomp(model.LL.2, c(0.5, 0.5), 
+EDcomp(model.W1.2, c(0.5, 0.5), 
        compMatch = c("A75", "A82"), type = "absolute", interval = "none", reverse = F)
 
 
@@ -149,15 +149,15 @@ EDcomp(model.LL.2, c(0.5, 0.5),
 
 
 # Comparing b parameter (slope)
-compParm(model.LL.2, strVal = "b", operator = "-")
+compParm(model.W1.2, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.LL.2, strVal = "d", operator = "-")
+compParm(model.W1.2, strVal = "d", operator = "-")
 
 
 # Comparing e parameter (Infletion Point)
-compParm(model.LL.2, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
+compParm(model.W1.2, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
 
 
 ```
@@ -175,7 +175,7 @@ tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD
 par(mar = c(5,5,1,1))
 
 
-plot(model.LL.2,
+plot(model.W1.2,
      type = "average",
      xlab = expression(paste("Atrazine rate (g ai ha"^-1, ")")),
      ylab = expression(paste("Biomass (x 100%)")),
