--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/2023/Atrazine_Absolute ED/MIs_Atra_GH_A75_DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/2023/Atrazine_Absolute ED/MIs_Atra_GH_A75_DR Percent Bio.Rmd
@@ -85,26 +85,26 @@ summary(model.LL4)
 getMeanFunctions() # To get the most used functions when fitting dose-response curves.
 
 
-mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), LL.5(), W1.2(), W1.3(), W1.4(), W2.2(), W2.3(), W2.4(), BC.4(), BC.5(), LL2.2(), LL2.3(), LL2.3u(), LL2.4(), LL2.5(), AR.2(), AR.3(), MM.2(), MM.3(), baro5()), linreg = T)
+mselect(model.LL4,  list(LL.2(), LL2.2(), LL.3(), LL.3u(), LL2.3(), LL2.3u(), LL.4(), LL2.4(), LL.5(), LL2.5(), W1.2(), W2.2(), W1.3(), W1.3u(), W2.3(), W2.3u(), W1.4(), W2.4()))
 
 
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL.2 <- drm(percent_bio ~ rate, herb, fct = LL.2(), data = data_A75, type = "continuous")
+model.W1.2 <- drm(percent_bio ~ rate, herb, fct = W1.2(), data = data_A75, type = "continuous")
 
 
-plot(fitted(model.LL.2), residuals(model.LL.2))
+plot(fitted(model.W1.2), residuals(model.W1.2))
 
-qqnorm(residuals(model.LL.2))
-
-
-modelFit(model.LL.2)
-
-summary(model.LL.2)
+qqnorm(residuals(model.W1.2))
 
 
-anova(model.LL.2, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model W1.3
+modelFit(model.W1.2)
+
+summary(model.W1.2)
+
+
+anova(model.W1.2, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model W1.3
 
 ```
 
@@ -117,11 +117,11 @@ anova(model.LL.2, model.LL4) # p-value > 0.05 means that there is no difference 
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.atra <- ED(model.LL.2, 0.5, clevel = "atra", type = "absolute", interval = "delta")
+ED50.atra <- ED(model.W1.2, 0.5, clevel = "atra", type = "absolute", interval = "delta")
 
-ED50.atra.P450 <- ED(model.LL.2, 0.5, clevel = "atra+P450", type = "absolute", interval = "delta")
+ED50.atra.P450 <- ED(model.W1.2, 0.5, clevel = "atra+P450", type = "absolute", interval = "delta")
 
-ED50.atra.GST <- ED(model.LL.2, 0.5, clevel = "atra+GST", type = "absolute", interval = "delta")
+ED50.atra.GST <- ED(model.W1.2, 0.5, clevel = "atra+GST", type = "absolute", interval = "delta")
 
 
 # In this case, fitting relative and absolute resulted in the same ED50. Perhaps because W1.3 has a lower limit = 0. In simulations using the W1.4, then the relative and absolute ED50 are different. 
@@ -136,11 +136,11 @@ ED50.atra.GST <- ED(model.LL.2, 0.5, clevel = "atra+GST", type = "absolute", int
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
 
-EDcomp(model.LL.2, c(0.5, 0.5), 
+EDcomp(model.W1.2, c(0.5, 0.5), 
        compMatch = c("atra", "atra+P450"), type = "absolute", interval = "none", reverse = T)
 
 
-EDcomp(model.LL.2, c(0.5, 0.5), 
+EDcomp(model.W1.2, c(0.5, 0.5), 
        compMatch = c("atra", "atra+GST"), type = "absolute", interval = "none", reverse = T)
 
 
@@ -171,7 +171,7 @@ tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD
 par(mar = c(5,5,1,1))
 
 
-plot(model.LL.2,
+plot(model.W1.2,
      type = "average",
      xlab = expression(paste("Atrazine rate (g ai ha"^-1, ")")),
      ylab = expression(paste("A75 Biomass (x 100%)")),
