--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED - Copy/MIs_Meso_GC_ DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED - Copy/MIs_Meso_GC_ DR Percent Bio.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Waterhemp MIs GC 2,4-D Biomass"
+title: "Waterhemp MIs GC Mesotrione Biomass"
 author: "Felipe Faleco"
 date: "10/25/2024"
 output:
@@ -20,18 +20,18 @@ library(dplyr)
 ```
 
 
-# COMPARING HERBICIDE + MI AT HIGH/LOW
+# COMPARING ONLY HERBICIDE AT HIGH/LOW
 
 # READ DATA
 
 ```{r}
 
-data <- read.csv("Data Sheet_2,4-D_GC.csv")
+data <- read.csv("Data Sheet_Meso_GC.csv")
 
 str(data)
 
 
-data.A101.24D.GST <- data %>% filter(pop == "A101", herb == "2,4D+GST")
+#data.A101.24D <- data %>% filter(pop == "A101", herb == "2,4D")
 
 
 
@@ -39,8 +39,7 @@ fun <- function(x){
   c( mean = mean(x, na.rm = T), VAR = var(x, na.rm = T), SD = sd(x, na.rm = T), SE = std.error(x, na.rm = T), n = length(x))
 }
 
-
-summary.A101.24D.GST <- summaryBy(cbind(percent_bio) ~ pop + rate + temp + herb, data = subset(data.A101.24D.GST),
+summary <- summaryBy(cbind(percent_bio) ~ treat + rate, data = data,
           FUN=fun)
 
 
@@ -52,7 +51,7 @@ summary.A101.24D.GST <- summaryBy(cbind(percent_bio) ~ pop + rate + temp + herb,
 
 ```{r}
 
-model.LL4 <- drm(percent_bio ~ rate, temp, fct = LL.4(), data = data.A101.24D.GST, type = "continuous")
+model.LL4 <- drm(percent_bio ~ rate, treat, fct = LL.4(), data = data, type = "continuous")
 
 
 plot(fitted(model.LL4), residuals(model.LL4))
@@ -87,11 +86,12 @@ mselect(model.LL4,  list(LL.2(), LL2.2(), LL.3(), LL.3u(), LL2.3(), LL2.3u(), LL
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.W1.2 <- drm(percent_bio ~ rate, temp, fct = W1.2(), data = data.A101.24D.GST, type = "continuous")
-
+model.W1.2 <- drm(percent_bio ~ rate, treat, fct = W1.2(), data = data, type = "continuous")
 
 
 plot(fitted(model.W1.2), residuals(model.W1.2))
+
+qqnorm(residuals(model.W1.2))
 
                 
 modelFit(model.W1.2)
@@ -112,9 +112,28 @@ anova(model.W1.2, model.LL4) # p-value > 0.05 means that there is no difference 
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.elevated <- ED(model.W1.2, 0.5, clevel = "elevated", type = "absolute", interval = "delta")
+ED50.A82.meso.elevated <- ED(model.W1.2, 0.5, clevel = "A82+meso+elevated", type = "absolute", interval = "delta")
 
-ED50.ambient <- ED(model.W1.2, 0.5, clevel = "ambient", type = "absolute", interval = "delta")
+ED50.A82.meso.ambient <- ED(model.W1.2, 0.5, clevel = "A82+meso+ambient", type = "absolute", interval = "delta")
+
+
+
+ED50.A101.meso.elevated <- ED(model.W1.2, 0.5, clevel = "A101+meso+elevated", type = "absolute", interval = "delta")
+
+ED50.A101.meso.ambient <- ED(model.W1.2, 0.5, clevel = "A101+meso+ambient", type = "absolute", interval = "delta")
+
+
+
+ED50.A101.meso.P450.elevated <- ED(model.W1.2, 0.5, clevel = "A101+meso+P450+elevated", type = "absolute", interval = "delta")
+
+ED50.A101.meso.P450.ambient<- ED(model.W1.2, 0.5, clevel = "A101+meso+P450+ambient", type = "absolute", interval = "delta")
+
+
+
+ED50.A101.meso.GST.elevated <- ED(model.W1.2, 0.5, clevel = "A101+meso+GST+elevated", type = "absolute", interval = "delta")
+
+ED50.A101.meso.GST.ambient <- ED(model.W1.2, 0.5, clevel = "A101+meso+GST+ambient", type = "absolute", interval = "delta")
+
 
 
 # In this case, fitting relative and absolute resulted in the same ED50. Perhaps because W1.3 has a lower limit = 0. In simulations using the W1.4, then the relative and absolute ED50 are different. 
@@ -130,7 +149,24 @@ ED50.ambient <- ED(model.W1.2, 0.5, clevel = "ambient", type = "absolute", inter
 
 
 EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("elevated", "ambient"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("A82+meso+elevated", "A82+meso+ambient"), type = "absolute", interval = "none", reverse = T)
+
+
+
+EDcomp(model.W1.2, c(0.5, 0.5), 
+       compMatch = c("A101+meso+elevated", "A101+meso+ambient"), type = "absolute", interval = "none", reverse = T)
+
+
+
+EDcomp(model.W1.2, c(0.5, 0.5), 
+       compMatch = c("A101+meso+P450+elevated", "A101+meso+P450+ambient"), type = "absolute", interval = "none", reverse = T)
+
+
+
+EDcomp(model.W1.2, c(0.5, 0.5), 
+       compMatch = c("A101+meso+GST+elevated", "A101+meso+GST+ambient"), type = "absolute", interval = "none", reverse = T)
+
+
 
 
 # Comparing b parameter (slope)
@@ -153,7 +189,7 @@ compParm(model.W1.2, strVal = "e", operator = "-") # Remember that for asymmetri
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED/MIs_2,4-D+GST_GC_A101_ DR Percent Bio.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED - Copy/MIs_Meso_GC_ DR Percent Bio.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -162,23 +198,29 @@ par(mar = c(5,5,1,1))
 
 plot(model.W1.2,
      type = "average",
-     xlab = expression(paste("2,4-D + GST rate (g ae ha"^-1, ")")),
-     ylab = expression(paste("A101 percent biomass (x 100%)")),
+     xlab = expression(paste("Mesotrione rate (g ae ha"^-1, ")")),
+     ylab = expression(paste("Percent biomass (x 100%)")),
      ylim = c(0, 1),
-     col = c("red", "darkgreen"),
-     pch = c(19, 17),
+     col = c("darkgreen", "darkorange", "navy", "chocolate", "black", "darkmagenta", "red", "snow4"),
+     pch = c(15, 0, 17, 23, 19, 2, 5, 1),
      cex = 1.5,
      cex.axis = 1.5,
      cex.lab = 2.0,
-     cex.legend = 1.8,
-     legendPos = c(4000, 1),
+     cex.legend = 1.2,
+     legendPos = c(500, 1),
      lwd = 1.5)
 
 
 
-points(x = c(ED50.elevated[1, 1],
-             ED50.ambient[1, 1]),
-       y = c(0.5, 0.5),
+points(x = c(ED50.A82.meso.elevated [1, 1],
+             ED50.A82.meso.ambient [1, 1],
+             ED50.A101.meso.elevated [1, 1],
+             ED50.A101.meso.ambient [1, 1],
+             ED50.A101.meso.P450.elevated [1, 1],
+             ED50.A101.meso.P450.ambient [1, 1],
+             ED50.A101.meso.GST.elevated [1, 1],
+             ED50.A101.meso.GST.ambient [1, 1]),
+       y = c(0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5),
        pch = 8,
        cex = 1.3)
 
